src/test/resources/query/error/queryWithOrderByWithMissingIndexReference/schema.graphqls
type Query {
  films(releaseYear: String! @field(name : "RELEASE_YEAR"), orderBy: FilmOrder @orderBy): [Film!]!
}

type Film implements Node @table {
  id: ID!
  title: String!
}

input FilmOrder {
  direction: OrderDirection!
  orderByField: FilmOrderByField!
}

enum FilmOrderByField {
  TITLE #missing @index reference
}